-XX:MaxPermSize=250m
https://confluence.jetbrains.com/display/YTD6/Installing+YouTrack+with+JAR+Distribution